--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>groupId</groupId>
-    <artifactId>AWSS3FileTransfer</artifactId>
+    <artifactId>aws-s3-file-transfer</artifactId>
     <version>1.0-SNAPSHOT</version>
 
     <properties>
